# PML-I2SB

./: .gitignore  README.md  compute_fid_score.py  compute_fid_stats.py  compute_ref_fid_stats.py  create_degradation_grid.py  inspect_checkpoint.py  job_script.sh  main.py  pyproject.toml  requirements.txt  test_dataloader.py  test_degradations.py  test_model.py
configs/: blur-gauss.yaml  blur-gaussian-1.yaml  inpaint-freeform2030.yaml  jpeg.yaml  jpeg_validation.yaml  ref_fid_stats.yaml  superres-bicubic-2.yaml  superres-bicubic.yaml  validation.yaml  validation_blur-gauss.yaml  validation_blur-uni.yaml  validation_inpaint-center.yaml  validation_inpaint-freeform2030.yaml  validation_jpeg.yaml  validation_superres-bicubic-10.yaml  validation_superres-bicubic-100.yaml  validation_superres-bicubic-1000.yaml  validation_superres-bicubic-500.yaml  validation_superres-bicubic.yaml
scripts/: train_multinode.sbatch  validate_multinode.sbatch
src/: dataset.py  degradation.py  diffusion.py  fid_utils.py  model.py  options.py  trainer.py  utils.py  validator.py
src/degradations/: __init__.py  blur.py  dct.py  imagenet_freeform_masks.npz  inpainting.py  jpeg.py  superres.py
src/fid/: compute_ref_fid_stats.py  fid_utils.py
src/guided_diffusion/: fp16_util.py  gaussian_diffusion.py  nn.py  respace.py  script_util.py  unet.py
